# manutrace

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: RELEASE_CHECKLIST.md
skills/manutrace/: SKILL.md
skills/manutrace/agents/: openai.yaml
skills/manutrace/references/: workflow.md
tools/pwt/: build_evidence_map.py  build_manuscript.py  coverage_report.py  evidence.schema.md  extract_journal_rules.py  manutrace_cli.py  migrate_manuscript.py  outline_gate.py  parse_references.py  pipeline.py  pwt_init.py  reference_candidate.py  reference_summaries.py  references.schema.md  rename_ref_keys.py  render_reference_preview.py
